--- a/Auto-Part/Auto-Part-WebUI/Views/Shop/Index.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Views/Shop/Index.cshtml
@@ -330,7 +330,7 @@
 
     <link rel="stylesheet" type="text/css" href="~/assets/css/pagination.css" />
 }
-@section js{
+@*@section js{
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js" integrity="sha512-3j3VU6WC5rPQB4Ld1jnLV7Kd5xr+cq9avvhwqzbH/taCRNURoeEpoPBK9pDyeukwSxwRPJ8fDgvYXd6SkaZ2TA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script>
             function addToCart(ev) {
@@ -364,4 +364,4 @@
         showCardCount();
 
     </script>
-}
+}*@
